--- a/todolist-api/config/config.json
+++ b/todolist-api/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "",
-    "database": "",
+    "password": "Panupong123",
+    "database": "todo",
     "host": "localhost",
     "dialect": "mysql"
   },
